[package]
name = "stb-client"
version = "0.1.0-5-g8853ed0"
edition = "2021"

[dependencies]
serde_json = "1.0.132"

[dependencies.reqwest]
version = "0.12.8"
features = ["blocking", "json"]

[dependencies.serde]
version = "1.0.210"
features = ["derive"]

[dependencies.tokio]
version = "1.40.0"
features = ["full"]
